	  Thanks to Petr Pisar and Sebastian Andrzej Siewior for the
	  patches (in #RT125218).
	- Enable OpenSSL 1.1.1-pre9 with Travis CI.
	- Add SSL_CTX_set_num_tickets, SSL_CTX_get_num_tickets,
	  SSL_set_num_ticket and SSL_get_num_tickets for controlling
	  the number of TLSv1.3 session tickets that are issued.  Add
	  tests in 44_sess.t. Parts taken from a larger patch by Petr
	  Pisar of RedHat.
	- Add SSL_CTX_set_security_level, SSL_CTX_get_security_level,
	  SSL_set_security_level and SSL_get_security_level.
	  Add new test file 65_security_level.t.
	  All courtesy of Damyan Ivanov of Debian project.
	- Add SSL_SESSION_is_resumable. Add and update tests in 44_sess.t.
	- Set OpenSSL security level to 1 in tests that use the test suite's
	  (1024-bit) RSA keys, which allows the test suite to pass when
	  Net-SSLeay is built against an OpenSSL with a higher default
	  security level. Fixes RT#126987. Thanks to Petr Pisar (in
	  RT#126270) and Damyan Ivanov (in RT#126987) for the reports and
	  patches, and to Damyan Ivanov for the preferred patch.
	- Add SSL_CTX_sess_set_new_cb and SSL_CTX_sess_set_remove_cb.
	  Add new test file 44_sess.t for these and future session
	  related tests for which no specific test file is needed.
	- Add SSL_get_version, SSL_client_version and SSL_is_dtls.
	- Enhance t/local/43_misc_functions.t get_keyblock_size test
	  to work better with AEAD ciphers.
	- Fix compile time DEFINE=-DSHOW_XS_DEBUG to work with
	  non-threaded Perls. Fixes RT#127027. Thanks to SREZIC for
	  the report. Also fix other minor compile warnings.

1.86_05 2018-08-22
	- Net-SSLeay now requires at least Perl 5.8.1. This is a
	  formalisation of what has been the de facto case for some time,
	  as the distribution hasn't compiled and passed its tests on Perl
	  5.005 for several years.
	- Increment Net::SSLeay::Handle's version number to keep it in sync
	  with Net::SSLeay's, thus satisfying Kwalitee's consistent_version
	  metric.