@@ -1995,6 +1995,13 @@ SSL_CTX_get_num_tickets(SSL_CTX *ctx)
 
 #endif
 
+#if OPENSSL_VERSION_NUMBER >= 0x10101003L && !defined(LIBRESSL_VERSION_NUMBER)
+
+int
+SSL_CTX_set_ciphersuites(SSL_CTX *ctx, const char *str)
+
+#endif
+
 void
 SSL_CTX_sess_set_new_cb(ctx, callback)
         SSL_CTX * ctx
@@ -2765,6 +2772,13 @@ SSL_set_num_tickets(SSL *ssl, size_t num_tickets)
 
 size_t
 SSL_get_num_tickets(SSL *ssl)
+
+#endif
+
+#if OPENSSL_VERSION_NUMBER >= 0x10101003L && !defined(LIBRESSL_VERSION_NUMBER)
+
+int
+SSL_set_ciphersuites(SSL *ssl, const char *str)
 
 #endif
 
