@@ -2908,6 +2908,20 @@ The format of $str is described in L<http://www.openssl.org/docs/apps/ciphers.ht
 
 Check openssl doc L<http://www.openssl.org/docs/ssl/SSL_CTX_set_cipher_list.html|http://www.openssl.org/docs/ssl/SSL_CTX_set_cipher_list.html>
 
+=item * CTX_set_ciphersuites
+
+B<COMPATIBILITY:> not available in Net-SSLeay-1.85 and before; requires at least OpenSSL 1.1.1, not in LibreSSL
+
+Configure the available TLSv1.3 ciphersuites.
+
+ my $rv = Net::SSLeay::CTX_set_ciphersuites($ctx, $str);
+ # $ctx  - value corresponding to openssl's SSL_CTX structure
+ # $str  - colon (":") separated list of TLSv1.3 ciphersuite names in order of preference
+ #
+ # returns: (integer) 1 if the requested ciphersuite list was configured, and 0 otherwise
+
+Check openssl doc L<https://www.openssl.org/docs/manmaster/man3/SSL_CTX_set_ciphersuites.html|https://www.openssl.org/docs/manmaster/man3/SSL_CTX_set_ciphersuites.html>
+
 =item * CTX_set_client_CA_list
 
 Sets the list of CAs sent to the client when requesting a client certificate for $ctx.
@@ -4303,6 +4317,20 @@ Sets the list of ciphers only for ssl.
  # returns: 1 if any cipher could be selected and 0 on complete failure
 
 Check openssl doc L<http://www.openssl.org/docs/ssl/SSL_CTX_set_cipher_list.html|http://www.openssl.org/docs/ssl/SSL_CTX_set_cipher_list.html>
+
+=item * set_ciphersuites
+
+B<COMPATIBILITY:> not available in Net-SSLeay-1.85 and before; requires at least OpenSSL 1.1.1, not in LibreSSL
+
+Configure the available TLSv1.3 ciphersuites.
+
+ my $rv = Net::SSLeay::set_ciphersuites($ssl, $str);
+ # $ssl  - value corresponding to openssl's SSL structure
+ # $str  - colon (":") separated list of TLSv1.3 ciphersuite names in order of preference
+ #
+ # returns: (integer) 1 if the requested ciphersuite list was configured, and 0 otherwise
+
+Check openssl doc L<https://www.openssl.org/docs/manmaster/man3/SSL_set_ciphersuites.html|https://www.openssl.org/docs/manmaster/man3/SSL_set_ciphersuites.html>
 
 =item * set_client_CA_list
 
